--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.14",
     "@types/three": "^0.160.0",
     "react": "^18.2.0",
