--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/three": "^0.160.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.160.1"
+    "three": "^0.160.1",
+    "valtio": "^1.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
